# DeepScientist

./: AGENTS.md  README.md  README_ZH.md  package-lock.json  package.json  pyproject.toml
assets/text/: index.json
assets/text/agents/: analysis-experimenter.md  pi.md  reproducer.md  writer.md
docs/: MEMORY_AND_MCP.md  README.md
docs/en/: 15_CODEX_PROVIDER_SETUP.md  MCP_MEMORY_PROTOCOL.md  TERMINAL_IMPLEMENTATION_CHECKLIST.md  TUI_USAGE.md
docs/zh/: 15_CODEX_PROVIDER_SETUP.md  MCP_MEMORY_PROTOCOL.md  README.md  RUNTIME_FLOW_AND_CANVAS.md  TERMINAL_IMPLEMENTATION_CHECKLIST.md  TUI_USAGE.md
skills/analysis-campaign/: SKILL.md
skills/baseline/: SKILL.md
skills/decision/: SKILL.md
skills/experiment/: SKILL.md
skills/idea/: SKILL.md
skills/scout/: SKILL.md
skills/write/: SKILL.md
src/deepscientist/: __init__.py  cli.py  home.py  shared.py  tui.py
src/deepscientist/acp/: envelope.py
src/deepscientist/artifact/: __init__.py  guidance.py  schemas.py  service.py
src/deepscientist/bash_exec/: monitor.py  service.py
src/deepscientist/bridges/: connectors.py
src/prompts/: system.md
src/tui/: package-lock.json  package.json
src/ui/: package-lock.json  package.json
tests/: test_acp_api.py  test_api_contract_surface.py  test_baseline_registry.py  test_codex_runner.py  test_config_testing.py  test_connector_bridges.py  test_daemon_api.py  test_generic_connectors.py  test_git_branch_canvas.py  test_init_and_quest.py  test_mcp_servers.py  test_memory_and_artifact.py  test_prompt_builder.py  test_stage_skills.py
ui/: app.css  app.js  index.html
(+79 files in other folders)
